syntax = "proto3";

package chat_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/sparhokm/go-course-ms-chat-server/pkg/chat_v1;chat_v1";

service ChatV1 {
  rpc Create(CreateIn) returns (CreateOut);
  rpc Delete(DeleteIn) returns (google.protobuf.Empty);
  rpc SendMessage(SendMessageIn) returns (google.protobuf.Empty);
}

message CreateIn {
  repeated string usernames = 1;
}

message CreateOut {
  int64 id = 1;
}

message DeleteIn {
  int64 id = 1;
}

message SendMessageIn {
  string from = 1;
  string text = 2;
  google.protobuf.Timestamp timestamp = 3;
}

